# flashcards-cli

./: .gitignore  .pre-commit-config.yaml  README.md  setup.cfg  setup.py
.github/: stale.yml
.github/ISSUE_TEMPLATE/: bug_report.md  other.md
.github/workflows/: codeql.yml  tests.yml
flashcards_cli/: __init__.py  __main__.py  cli.py  main.py  study.py  study_class_stub.py
flashcards_cli/edit/: __init__.py  cards.py  decks.py
tests/: conftest.py  test_random.py
